bk_ida/gobmkida/g2/do_owl_attack
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/do_owl_attack/src/engine/owl.c:2055:39: error: use of undeclared identifier 'unk_49B8F8'
shape_moves[0].name = ( const char *)&unk_49B8F8; 
                                      ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/do_owl_attack/src/obj/1/owl.o] Error 1
